--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -1,4 +1,6 @@
-<h1>Book Review App</h1>
-<p>Welcome to the book review application!</p>
-<%= link_to 'View all book reviews', books_path %>
-<%= link_to 'Add new book review', new_book_path %>
+<h1>ようこそBookersへ！</h1>
+<p>Bookers では、さまざまな書籍に関するあなたの意見や
+</br>
+印象を共有し交換することができます</p>
+
+<%= link_to 'Start', books_path %>
