--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,29 @@
+<h1>Book Reviews</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= truncate(book.body, length: 50) %></td>
+        <td><%= link_to 'Show', book_path(book.id) %></td>
+        <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
+        <td><%= link_to 'Destroy', book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？"%></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
 <h1>New Book</h1>
+
 
 <% if @book.errors.any? %>
   <div id="error_explanation">
@@ -27,5 +52,3 @@
     <%= form.submit %>
   </div>
 <% end %>
-
-<%= link_to 'Back', books_path %>
